--- a/.github/workflows/android-release.yml
+++ b/.github/workflows/android-release.yml
@@ -139,11 +139,11 @@ jobs:
             mkdir -p Android/v8so/libs/arm64-v8a
             mkdir -p Android/v8so/libs/armeabi-v7a
             mkdir -p Android/v8so/libs/x86
-            mkdir -p Android/v8so/libs/x64
+            mkdir -p Android/v8so/libs/x86_64
             cp ${GITHUB_WORKSPACE}/v8/v8/out/arm64/lib*.so Android/v8so/libs/arm64-v8a/
             cp ${GITHUB_WORKSPACE}/v8/v8/out/arm32/lib*.so Android/v8so/libs/armeabi-v7a/
             cp ${GITHUB_WORKSPACE}/v8/v8/out/x86/lib*.so Android/v8so/libs/x86/
-            cp ${GITHUB_WORKSPACE}/v8/v8/out/x64/lib*.so Android/v8so/libs/x64/
+            cp ${GITHUB_WORKSPACE}/v8/v8/out/x64/lib*.so Android/v8so/libs/x86_64/
 
       - name: Set up JDK 11
         uses: actions/setup-java@v1
