--- a/Android/v8so/build.gradle
+++ b/Android/v8so/build.gradle
@@ -22,7 +22,7 @@ android {
     buildTypes {
         release {
             ndk {
-                abiFilters 'armeabi-v7a', 'arm64-v8a', 'x86', "x64"
+                abiFilters 'armeabi-v7a', 'arm64-v8a', 'x86', "x86_64"
             }
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
